# open-mongodb-trigger

./: .pre-commit-config.yaml  404.html  CNAME  Cargo.toml  LICENSE  Makefile  README.md  _typos.toml  cli.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: function.proto  trigger.proto
abi/src/: config.rs  error.rs  lib.rs
abi/src/pb/: function.rs  mod.rs  trigger.rs
abi/src/types/: function.rs  function_query.rs  mod.rs  trigger.rs  trigger_query.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: event.rs  lib.rs  mem.rs  result.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  cli.md
docs/src/for_developers/: README.md
docs/src/function/: README.md
docs/src/guide/: create_function.md  create_trigger.md  trigger_it.md
docs/src/trigger/: README.md
examples/wasm/: README.md
examples/wasm/go-event-handler/: EventResult_json.go  Event_json.go  Makefile  README.md  entry.go  go.mod  go.sum  lib.go  model.go
examples/wasm/go-event-handler/model/: ChangeNamespace_json.go  ChangeStreamEvent_json.go  EventResult_json.go  ResumeToken_json.go  model.go
examples/wasm/hello-world-lib/: Cargo.toml
examples/wasm/hello-world-lib/src/: lib.rs
examples/wasm/rust-event-handler/: Cargo.toml
examples/wasm/rust-event-handler-lib/: Cargo.toml  README.md
examples/wasm/rust-event-handler-lib/src/: lib.rs
examples/wasm/rust-event-handler/src/: lib.rs  main.rs
for_developers/: index.html
function/: Cargo.toml  index.html
function/src/: lib.rs  manager.rs
guide/: create_function.html  create_trigger.html  trigger_it.html
rfcs/: 0001-core-service.md  0001-core-trigger.md  0002-cli.md  template.md
service/: Cargo.toml
service/fixtures/: config.toml
service/src/: func.rs  function_service.rs  lib.rs  main.rs  test_utils.rs  trigger_service.rs  watcher.rs
service/tests/: function_service.rs  trigger_service.rs
trigger/: Cargo.toml  index.html
trigger/src/: lib.rs  manager.rs
wasm/: Cargo.toml
wasm/src/: engine.rs  lib.rs  wasmtimecli.rs
