[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.66"
clap = { version = "4.0.23", features = ["derive"] }
tokio = "1.21.2"
tonic = "0.8.2"
