[package]
name = "function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.58"
bson = "2.4.0"
chrono = "0.4.22"
futures = "0.3.25"
mongodb = "2.3.1"
serde = "1.0.147"
tokio = "1.21.2"
tracing = "0.1.37"
