[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.66"
bson = "2.4.0"
chrono = "0.4.23"
common = { version = "0.1.0", path = "../common" }
dashmap = "5.4.0"
function = { version = "0.1.0", path = "../function" }
futures = "0.3.25"
mongodb = "2.3.1"
serde = "1.0.147"
serde_json = "1.0.89"
shellexpand = "2.1.2"
timer = "0.2.0"
tokio = "1.21.2"
tonic = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trigger = { version = "0.1.0", path = "../trigger" }
wasm = { version = "0.1.0", path = "../wasm" }

[dev-dependencies]
rand = "0.8.5"
