[package]
name = "example-wasm-rust-event-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = "1.0.66"
bson = "2.4.0"
common = { version = "0.1.0", path = "../../../common" }
